tests/ui/borrowck/closure-borrow-conflict-11192.stderr
error[E0502]: cannot borrow `*ptr` as immutable because it is also borrowed as mutable
  --> $DIR/closure-borrow-conflict-11192.rs:22:10
   |
LL |     let mut test = |foo: &Foo| {
   |                    ----------- mutable borrow occurs here
LL |         println!("access {}", foo.x);
LL |         ptr = Box::new(Foo { x: ptr.x + 1 });
   |         --- first borrow occurs due to use of `ptr` in closure
...
LL |     test(&*ptr);
   |     ---- ^^^^^ immutable borrow occurs here
   |     |
   |     mutable borrow later used by call

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
